@@ -1,3 +1,8 @@
+<h5>1.01 Beta 1   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.15, PHP 8.0.2
+<hr>
+- streamlined test data buttons with mTools' TestdataButtons class
+- added usage of TestdataSample class from mTools
+
 <h5>1.0 Beta 1      [2020/09/05]</h5>
 <hr>
  - Beta 1 release (mamba)
